# MOBC_pp_sda

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bot.py  myenv.yaml  pyproject.toml  requirements.txt
handlers/: authors.py  common.py  predict.py  rate.py  utils.py
keyboards/: authors.py  main_menu.py  model_select.py  rate.py
main/: botdef.py  config_reader.py
tests/: test_authors.py  test_common.py  test_predict.py  test_rate.py  test_utils.py
