[tool.poetry]
name = "mobc-pp-sda"
version = "0.1.0"
description = "Telegram bot with test suit"
authors = ["Dmitry Shiltsov <sda@asperito.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
pydentic = "^0.0.1.dev3"
pydantic-settings = "^2.1.0"
pymystem3 = "^0.2.0"
scipy = "1.11.4"
scikit-learn = "1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pre-commit = "^3.6.1"
pytest-mock = "^3.12.0"
aiogram-tests = {git = "https://github.com/Like6po/aiogram_tests.git"}
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.2.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
